k8s/aws/aws-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qvalidate-aws-alb-ingress
  namespace: qvalidate-system
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: qvalidate-control-plane-service
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qvalidate-frontend-service
                port:
                  number: 3000
